--- a/examples/gitlab-backup-mirror-secret.yaml
+++ b/examples/gitlab-backup-mirror-secret.yaml
@@ -4,8 +4,8 @@ metadata:
   name: gitlab-backup-mirror-secret
 type: Opaque
 stringData:
-  gitlab-minio-url: https://gitlab-minio.example.com
-  gitlab-backup-retention: 7d0h0m
-  backup-minio-url: https://minio-backup.example.com
-  backup-minio-accesskey: <BACKUP_MINIO_ACCESSKEY>
-  backup-minio-secretkey: <BACKUP_MINIO_SECRETKEY>
+  GITLAB_MINIO_URL: https://gitlab-minio.example.com
+  BACKUP_MINIO_URL: https://minio-backup.example.com
+  BACKUP_MINIO_ACCESSKEY: abc
+  BACKUP_MINIO_SECRETKEY: def
+  GITLAB_BACKUP_RETENTION: 7d0h0m
