--- a/examples/gitlab-backup-mirror-secret.yaml
+++ b/examples/gitlab-backup-mirror-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gitlab-backup-mirror-secret
+  name: gitlab-backup-mirror
 type: Opaque
 stringData:
   GITLAB_MINIO_URL: https://gitlab-minio.example.com
