--- a/deploy/secret.yaml
+++ b/deploy/secret.yaml
@@ -5,8 +5,8 @@ metadata:
   name: gitlab-backup-mirror
 type: Opaque
 stringData:
-  GITLAB_MINIO_URL: https://gitlab-minio.example.com
-  BACKUP_MINIO_URL: https://minio-backup.example.com
+  GITLAB_MINIO_URL: http://gitlab-minio.gitlab.svc.cluster.local:9000
+  BACKUP_MINIO_URL: http://backup-minio.backup-minio.svc.cluster.local:9000
   BACKUP_MINIO_ACCESSKEY: abc
   BACKUP_MINIO_SECRETKEY: def
   GITLAB_BACKUP_RETENTION: 7d0h0m
