--- a/deploy/secret.yaml
+++ b/deploy/secret.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: gitlab-backup-mirror
+  name: mirrio
 type: Opaque
 stringData:
-  GITLAB_MINIO_URL: http://gitlab-minio.gitlab.svc.cluster.local:9000
-  BACKUP_MINIO_URL: http://backup-minio.backup-minio.svc.cluster.local:9000
-  BACKUP_MINIO_ACCESSKEY: abc
-  BACKUP_MINIO_SECRETKEY: def
-  GITLAB_BACKUP_RETENTION: 7d0h0m
+  SOURCE_URL: http://gitlab-minio.gitlab.svc.cluster.local:9000
+  DESTINATION_URL: http://backup-minio.backup-minio.svc.cluster.local:9000
+  DESTINATION_ACCESSKEY: abc
+  DESTINATION_SECRETKEY: def
+  RETENTION: 7d0h0m
