--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,19 +1,34 @@
-name: Publish Docker image
+---
 on:
   release:
-    types: [published]
+    types:
+      - created
+
 jobs:
-  push_to_registries:
-    name: Push Docker image to multiple registries
+  multi:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
+      - name: Checkout
         uses: actions/checkout@v2
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ghcr.io
-          repository: containeroo/mirrio
-          tag_with_ref: true
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Prepare release tag
+        id: tag
+        run: echo ::set-output name=version::${GITHUB_REF#refs/tags/v}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+          push: true
+          tags: |
+            containeroo/mirrio:latest
+            containeroo/mirrio:${{ steps.tag.outputs.version }}
