--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to GitHub Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Prepare release tag
         id: tag
         run: echo ::set-output name=version::${GITHUB_REF#refs/tags/v}
@@ -32,3 +38,5 @@ jobs:
           tags: |
             containeroo/mirrio:latest
             containeroo/mirrio:${{ steps.tag.outputs.version }}
+            ghcr.io/containeroo/mirrio:latest
+            ghcr.io/containeroo/mirrio:${{ steps.tag.outputs.version }}
