--- a/deploy/cronjob.yaml
+++ b/deploy/cronjob.yaml
@@ -4,7 +4,7 @@ kind: CronJob
 metadata:
   name: mirrio
 spec:
-  schedule: '0 2 * * *'
+  schedule: "0 2 * * *"
   failedJobsHistoryLimit: 3
   successfulJobsHistoryLimit: 1
   concurrencyPolicy: Forbid
