--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,19 @@
 {
   "extends": ["config:base"],
-  "labels": ["dependency"]
+  "labels": ["dependency"],
+  "packageRules": [
+    {
+      "matchDatasources": ["github-releases"],
+      "versioning": "regex:^RELEASE\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z(-(?<compatibility>.*))?$",
+      "matchPackageNames": ["minio/mc"]
+    }
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": ["(^|/)Dockerfile$", "(^|/)Dockerfile\\.[^/]*$"],
+      "matchStrings": [
+        "#\\srenovate:\\sdatasource=(?<datasource>.*?) depName=(?<depName>.*?)\\s(ENV|ARG) .*?_VERSION(\\s+|=)(?<currentValue>.*)\\s"
+      ]
+    }
+  ]
 }
