--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,8 +21,8 @@ jobs:
         run: |
           docker build -t test/mirrio .
           docker network create minio
-          docker run -d -n minio -p 9000:9000 -e "MINIO_ACCESS_KEY=minio" -e "MINIO_SECRET_KEY=minio123" --name minio1 minio/minio server /data
-          docker run -d -n minio -p 9001:9000 -e "MINIO_ACCESS_KEY=minio" -e "MINIO_SECRET_KEY=minio123" --name minio2 minio/minio server /data
+          docker run -d --network minio -p 9000:9000 -e "MINIO_ACCESS_KEY=minio" -e "MINIO_SECRET_KEY=minio123" --name minio1 minio/minio server /data
+          docker run -d --network minio -p 9001:9000 -e "MINIO_ACCESS_KEY=minio" -e "MINIO_SECRET_KEY=minio123" --name minio2 minio/minio server /data
 
       - name: Install Minio Client
         run: |
@@ -48,7 +48,7 @@ jobs:
           mc ls minio1/source
           mc ls minio2/destination
           docker run \
-            -n minio \
+            --network minio \
             -e SOURCE_URL=http://minio1:9000 \
             -e SOURCE_ACCESSKEY=minio \
             -e SOURCE_SECRETKEY=minio123 \
