use alpine-toolbox as base image

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,11 +1,28 @@
 {
-  "extends": ["config:base"],
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "semanticCommits": "enabled",
+  "dependencyDashboard": true,
+  "separateMajorMinor": false,
   "labels": ["dependency"],
+  "stabilityDays": 1,
+  "prCreation": "not-pending",
+  "regexManagers": [
+    {
+      "fileMatch": ["(^|/)Dockerfile$", "(^|/)Dockerfile\\.[^/]*$"],
+      "matchStrings": [
+        "#\\srenovate:\\sdatasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?( extractVersion=(?<extractVersion>.*?))?\\s(ENV|ARG) .*?_VERSION(\\s+|=)(?<currentValue>.*)\\s"
+      ],
+      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
+    }
+  ],
   "packageRules": [
     {
-      "matchDatasources": ["docker"],
-      "versioning": "regex:^RELEASE\\.(?<major>\\d+)-(?<minor>\\d+)-(?<patch>\\d+)T.*Z(-(?<compatibility>.*))?$",
-      "matchPackageNames": ["minio/mc"]
+      "matchDatasources": ["docker", "github-releases", "github-tags"],
+      "matchUpdateTypes": ["patch", "minor", "major"],
+      "enabled": true
     }
-  ]
+  ],
+  "pre-commit": {
+    "enabled": true
+  }
 }
