--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Create test buckets
         run: |
-          mc config host add minio1 http://localhost:9000 minio minio123
-          mc config host add minio2 http://localhost:9001 minio minio123
+          mc alias set minio1 http://localhost:9000 minio minio123
+          mc alias set minio2 http://localhost:9001 minio minio123
           mc mb minio1/source
           mc mb minio2/destination
 
