--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -3,36 +3,13 @@
   "semanticCommits": "enabled",
   "dependencyDashboard": true,
   "separateMajorMinor": false,
-  "labels": [
-    "dependency"
-  ],
+  "labels": ["dependency"],
   "minimumReleaseAge": "1 day",
   "prCreation": "not-pending",
-  "customManagers": [
-    {
-      "customType": "regex",
-      "managerFilePatterns": [
-        "/(^|/)Dockerfile$/",
-        "/(^|/)Dockerfile\\.[^/]*$/"
-      ],
-      "matchStrings": [
-        "#\\srenovate:\\sdatasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?( extractVersion=(?<extractVersion>.*?))?\\s(ENV|ARG) .*?_VERSION(\\s+|=)(?<currentValue>.*)\\s"
-      ],
-      "versioningTemplate": "{{#if versioning}}{{{versioning}}}{{else}}semver{{/if}}"
-    }
-  ],
   "packageRules": [
     {
-      "matchDatasources": [
-        "docker",
-        "github-releases",
-        "github-tags"
-      ],
-      "matchUpdateTypes": [
-        "patch",
-        "minor",
-        "major"
-      ],
+      "matchDatasources": ["docker", "github-releases", "github-tags"],
+      "matchUpdateTypes": ["patch", "minor", "major"],
       "enabled": true
     }
   ],
